@@ -29,8 +29,10 @@ public class ModDispenserBehaviour {
             protected ItemStack dispenseSilently(BlockPointer pointer, ItemStack stack) {
 
                 //lists of flowers with matching indexes to ease the search
-                final List<Block> bushyflowers$validFlowers = Arrays.asList(Blocks.POPPY, Blocks.RED_TULIP, Blocks.ORANGE_TULIP, Blocks.PINK_TULIP, Blocks.WHITE_TULIP, Blocks.AZURE_BLUET, Blocks.OXEYE_DAISY, Blocks.BLUE_ORCHID, Blocks.CORNFLOWER, Blocks.DANDELION, Blocks.ALLIUM, Blocks.WITHER_ROSE, Blocks.LILY_OF_THE_VALLEY);
-                final Supplier<List<Block>> bushyflowers$grownFlowers = Suppliers.memoize(() -> List.of(ModBlocks.GROWN_POPPY, ModBlocks.GROWN_RED_TULIP, ModBlocks.GROWN_ORANGE_TULIP, ModBlocks.GROWN_PINK_TULIP, ModBlocks.GROWN_WHITE_TULIP, ModBlocks.GROWN_AZURE_BLUET, ModBlocks.GROWN_OXEYE_DAISY, ModBlocks.GROWN_BLUE_ORCHID, ModBlocks.GROWN_CORNFLOWER, ModBlocks.GROWN_DANDELION, ModBlocks.GROWN_ALLIUM, ModBlocks.GROWN_WITHER_ROSE, ModBlocks.GROWN_LILY));
+                final List<Block> bushyflowers$validFlowers = Arrays.asList(Blocks.POPPY, Blocks.RED_TULIP, Blocks.ORANGE_TULIP, Blocks.PINK_TULIP, Blocks.WHITE_TULIP, Blocks.AZURE_BLUET, Blocks.OXEYE_DAISY, Blocks.BLUE_ORCHID, Blocks.CORNFLOWER, Blocks.DANDELION, Blocks.ALLIUM,
+                        Blocks.WITHER_ROSE, Blocks.LILY_OF_THE_VALLEY, Blocks.TORCHFLOWER);
+                final Supplier<List<Block>> bushyflowers$grownFlowers = Suppliers.memoize(() -> List.of(ModBlocks.GROWN_POPPY, ModBlocks.GROWN_RED_TULIP, ModBlocks.GROWN_ORANGE_TULIP, ModBlocks.GROWN_PINK_TULIP, ModBlocks.GROWN_WHITE_TULIP, ModBlocks.GROWN_AZURE_BLUET, ModBlocks.GROWN_OXEYE_DAISY
+                        , ModBlocks.GROWN_BLUE_ORCHID, ModBlocks.GROWN_CORNFLOWER, ModBlocks.GROWN_DANDELION, ModBlocks.GROWN_ALLIUM, ModBlocks.GROWN_WITHER_ROSE, ModBlocks.GROWN_LILY, ModBlocks.GROWN_TORCHFLOWER));
 
                 //help variables
                 this.setSuccess(true);
